--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -1,6 +1,6 @@
-.wy-side-nav-search, .wy-nav-side {background: 			#FFBBFF			;}
+.wy-side-nav-search, .wy-nav-side {background: 			#FF69B4			;}
 
-.wy-side-nav-search, .wy-nav-top {background: 		#B0E2FF	;}
+.wy-side-nav-search, .wy-nav-top {background: 		#87CEFF	;}
 
 
 .wy-nav-content {max-width: 1000px;}
