--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -1,4 +1,4 @@
-.wy-side-nav-search, .wy-nav-side {background: 			#FF69B4			;}
+.wy-side-nav-search, .wy-nav-side {background: 			#FFB6C1			;}
 
 .wy-side-nav-search, .wy-nav-top {background: 		#87CEFF	;}
 
