--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -1,14 +1,12 @@
-.wy-side-nav-search, .wy-nav-side {background: 			#191970		;}
+.wy-side-nav-search, .wy-nav-side {background: 			#87CEFF		;}
 
 .wy-side-nav-search, .wy-nav-top {background: #87CEFF;}
 
 
 .wy-nav-side {font-weight: bold;}
 
+.wy-nav-content {max-width: 1200px !important;}
 
+@import url("default.css");span.caption-text {color: black;}
 
-@import url("default.css");span.caption-text {color: white;}
-
-a:visited {color: 	#white	;}
-
-
+a:visited {color: 	black	;}
