--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -1,6 +1,6 @@
-.wy-side-nav-search, .wy-nav-side {background: 			#191970		;}
+.wy-side-nav-search, .wy-nav-side {background: 			#551A8B		;}
 
-.wy-side-nav-search, .wy-nav-top {background: #87CEFF;}
+.wy-side-nav-search, .wy-nav-top {background: #00C5CD	;}
 
 
 .wy-nav-side {font-weight: bold;}
