--- a/docs/_static/custom.css
+++ b/docs/_static/custom.css
@@ -1,4 +1,4 @@
-.wy-side-nav-search, .wy-nav-side {background: 			#551A8B		;}
+.wy-side-nav-search, .wy-nav-side {background: 			#292421		;}
 
 .wy-side-nav-search, .wy-nav-top {background: #00C5CD	;}
 
